modification du style

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tp_pratique</title>
 </head>
 <body>
-    <h1>Je fais mon premier commit, <br>et mon secon commit sera un ajout du style.</h1>
+    <h1 class="h1">Je fais mon premier commit, <br>et mon second commit sera un ajout du style.</h1>
 </body>
 </html>
